--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^9.0.0",
+    "express": "^4.17.1",
+    "knex": "^0.95.4",
+    "lodash": "^4.17.21",
+    "pg": "^8.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
